; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_compressor_backing_store.c_vm_swapout_find_free_soc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_compressor_backing_store.c_vm_swapout_find_free_soc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swapout_io_completion = type { i64 }

@VM_SWAPOUT_LIMIT_MAX = common dso_local global i32 0, align 4
@vm_swapout_ctx = common dso_local global %struct.swapout_io_completion* null, align 8
@vm_swapout_soc_busy = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.swapout_io_completion* ()* @vm_swapout_find_free_soc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.swapout_io_completion* @vm_swapout_find_free_soc() #0 {
  %1 = alloca %struct.swapout_io_completion*, align 8
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  br label %3

3:                                                ; preds = %21, %0
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @VM_SWAPOUT_LIMIT_MAX, align 4
  %6 = icmp slt i32 %4, %5
  br i1 %6, label %7, label %24

7:                                                ; preds = %3
  %8 = load %struct.swapout_io_completion*, %struct.swapout_io_completion** @vm_swapout_ctx, align 8
  %9 = load i32, i32* %2, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds %struct.swapout_io_completion, %struct.swapout_io_completion* %8, i64 %10
  %12 = getelementptr inbounds %struct.swapout_io_completion, %struct.swapout_io_completion* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %7
  %16 = load %struct.swapout_io_completion*, %struct.swapout_io_completion** @vm_swapout_ctx, align 8
  %17 = load i32, i32* %2, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.swapout_io_completion, %struct.swapout_io_completion* %16, i64 %18
  store %struct.swapout_io_completion* %19, %struct.swapout_io_completion** %1, align 8
  br label %30

20:                                               ; preds = %7
  br label %21

21:                                               ; preds = %20
  %22 = load i32, i32* %2, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %2, align 4
  br label %3

24:                                               ; preds = %3
  %25 = load i32, i32* @vm_swapout_soc_busy, align 4
  %26 = load i32, i32* @VM_SWAPOUT_LIMIT_MAX, align 4
  %27 = icmp eq i32 %25, %26
  %28 = zext i1 %27 to i32
  %29 = call i32 @assert(i32 %28)
  store %struct.swapout_io_completion* null, %struct.swapout_io_completion** %1, align 8
  br label %30

30:                                               ; preds = %24, %15
  %31 = load %struct.swapout_io_completion*, %struct.swapout_io_completion** %1, align 8
  ret %struct.swapout_io_completion* %31
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
